--- a/app/src/static/html/audio.html
+++ b/app/src/static/html/audio.html
@@ -333,6 +333,7 @@
                 recognition.onresult = function (event) {
                     const transcript = event.results[0][0].transcript;
                     messageInput.value = transcript;
+                    console.log(transcript);
                     stopRecording();
                 };
 
