feat: add mission progress bar

--- a/app/src/static/html/directing.html
+++ b/app/src/static/html/directing.html
@@ -538,7 +538,7 @@
             container.className = "do-it-container";
             const doItBtn = document.createElement("button");
             doItBtn.className = "do-it-btn";
-            doItBtn.textContent = "시나리오 입장 하기";
+            doItBtn.textContent = "시나리오 시작";
             doItBtn.addEventListener("click", () => {
                 location.href = `/script/${script_id}`;
             });
